# fast-stream

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
src/: align.rs  bytes.rs  crc32.rs  deflate.rs  endian.rs  len.rs  length.rs  lib.rs  pin.rs  stream.rs  vec.rs
