[package]
name = "fast_stream"
version = "0.0.2"
edition = "2021"
authors = ["lake"]
description = "stream"
repository = "https://github.com/dounine/fast-stream"
license = "MIT"
keywords = ["stream"]

exclude = ["example"]

[workspace]
members = [".", "example", "derive"]

[dependencies]

[dependencies.derive]
path = "derive"
optional = true

[features]
default = []
all = ["enum", "file"]
file = []
enum = ["derive"]
