[package]
name = "fast-stream"
version = "0.0.2"
edition = "2021"
authors = ["lake"]
description = "stream"
repository = "https://github.com/dounine/fast-stream"
license = "MIT"
keywords = ["stream"]

exclude = ["example"]

[workspace]
members = [".", "example", "derive"]

[dependencies]

[dependencies.derive]
path = "derive"
optional = true
[dependencies.crc32fast]
version = "1.4.2"
optional = true
[dependencies.miniz_oxide]
version = "0.8.5"
optional = true

[features]
default = []
all = ["enum", "file", "crc32", "deflate"]
file = []
enum = ["derive"]
crc32 = ["crc32fast"]
deflate = ["miniz_oxide"]

