[package]
name = "fast-stream"
version = "0.0.2"
edition = "2024"
authors = ["lake"]
description = "stream"
repository = "https://github.com/dounine/fast-stream"
license = "MIT"
keywords = ["stream"]

exclude = ["example"]

[workspace]
members = [".", "example", "derive"]

[dependencies]
sha1 = "0.10.6"
sha2 = "0.10.8"

[dependencies.derive]
path = "derive"
optional = true
[dependencies.crc32fast]
version = "1.4.2"
optional = true
[dependencies.miniz_oxide]
git = "https://github.com/dounine/miniz_oxide"
optional = true
[dependencies.tempfile]
version = "3.19.1"
optional = true

[features]
default = ["mem"]
all = ["file", "mem"]
mem = ["crc32", "deflate", "enum"]
file = ["tempfile"]
enum = ["derive"]
crc32 = ["crc32fast"]
deflate = ["miniz_oxide"]

